--- a/server/.env.sample
+++ b/server/.env.sample
@@ -2,3 +2,4 @@ PORT=8080
 NODE_ENV=development
 MONGO_URI= mongodb://127.0.0.1:27017
 DATABASE_NAME = pdf_store
+FRONTEND_URL = http://localhost:5173
